--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,11 +19,10 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set up QEMU
-        id: qemu
+        if: runner.os == 'Linux'
         uses: docker/setup-qemu-action@v1
         with:
           platforms: all
-        if: runner.os == "Linux"
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.16.2
