--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -6,6 +6,11 @@ build-backend = "setuptools.build_meta"
 name = "sqlite-zstd"
 requires-python = ">=3.9"
 dynamic = ["version"]
+readme = "README.md"
+
+[project.readme]
+file = "README.md"
+content-type = "text/markdown"
 
 [project.entry-points.datasette]
 sqlite_zstd = "sqlite_zstd.datasette"
