--- a/.github/workflows/pypi_release.yml
+++ b/.github/workflows/pypi_release.yml
@@ -23,7 +23,7 @@ jobs:
         if: runner.os == 'Linux'
         uses: docker/setup-qemu-action@v1
         with:
-          platforms: all
+          platforms: all aarch64
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.18.0
